--- a/hugomac/hugomac.PreferencesViewController.xib
+++ b/hugomac/hugomac.PreferencesViewController.xib
@@ -4,7 +4,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8187.4"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner"/>
+        <customObject id="-2" userLabel="File's Owner" customClass="PreferencesViewController" customModule="hugomac" customModuleProvider="target">
+            <connections>
+                <outlet property="view" destination="c22-O7-iKe" id="YKi-b4-HUP"/>
+            </connections>
+        </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="c22-O7-iKe">
@@ -12,14 +16,17 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Acy-bM-OXC">
-                    <rect key="frame" x="14" y="201" width="103" height="32"/>
+                    <rect key="frame" x="14" y="224" width="103" height="32"/>
                     <buttonCell key="cell" type="push" title="Pick config" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="W6h-9q-BwF">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
+                    <connections>
+                        <action selector="pickConfig" target="-2" id="c8a-qe-cTu"/>
+                    </connections>
                 </button>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UDa-21-TuW">
-                    <rect key="frame" x="18" y="234" width="366" height="18"/>
+                    <rect key="frame" x="117" y="234" width="345" height="18"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="No current config" id="AAb-ea-1PX">
                         <font key="font" size="14" name=".HelveticaNeueDeskInterface-Regular"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
