Experimenting with storing configs.

--- a/hugomac/hugomac.PreferencesViewController.xib
+++ b/hugomac/hugomac.PreferencesViewController.xib
@@ -16,18 +16,36 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Acy-bM-OXC">
-                    <rect key="frame" x="14" y="224" width="103" height="32"/>
-                    <buttonCell key="cell" type="push" title="Pick config" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="W6h-9q-BwF">
+                    <rect key="frame" x="14" y="190" width="103" height="32"/>
+                    <buttonCell key="cell" type="push" title="Pick theme" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="W6h-9q-BwF">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
                     <connections>
-                        <action selector="pickConfig" target="-2" id="c8a-qe-cTu"/>
+                        <action selector="pickTheme:" target="-2" id="X1o-oa-4aK"/>
                     </connections>
                 </button>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UDa-21-TuW">
+                    <rect key="frame" x="117" y="200" width="345" height="18"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="No theme folder" id="AAb-ea-1PX">
+                        <font key="font" size="14" name=".HelveticaNeueDeskInterface-Regular"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mhq-i8-a3y">
+                    <rect key="frame" x="14" y="224" width="103" height="32"/>
+                    <buttonCell key="cell" type="push" title="Pick content" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="ywg-g4-L3u">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="pickContent:" target="-2" id="ktW-Yk-zbW"/>
+                    </connections>
+                </button>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oIG-ap-EH8">
                     <rect key="frame" x="117" y="234" width="345" height="18"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="No current config" id="AAb-ea-1PX">
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="No content folder" id="VLQ-fD-7fa">
                         <font key="font" size="14" name=".HelveticaNeueDeskInterface-Regular"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
